# ColoringPageGenerator

./: README.md  copilot-instructions.md  pyproject.toml
scripts/: convert_image.py
src/coloring_page_generator/: __init__.py  processor.py
tests/: conftest.py  test_processor.py
